# NFT-Marketplace-LLM

./: .gitignore  README.md  check_faiss.py  pyproject.toml  requirements.txt
API_Marketplace/: api.py
API_Marketplace/nft-marketplace-llm/: docker-compose-node.yml  keystore.json  package.json  start-node.sh
API_Marketplace/nft-marketplace-llm/components/: Spinner.js
API_Marketplace/nft-marketplace-llm/pages/api/: files.js  json.js
nft-marketplace-llm/: account.md  build.sh  decode-key.js  hardhat.config.js  package-lock.json
nft-marketplace-llm/cache/: solidity-files-cache.json
nft-marketplace-llm/components/: Loading.js
nft-marketplace-llm/contracts/: NFTMarket.sol
nft-marketplace-llm/pages/: _app.js  create-item.js  index.js  my-nfts.js  search.js
nft-marketplace-llm/pages/nft/: [id].js
nft-marketplace-llm/utils/: utils.js
seller/: autoddg.py  blockchain_verify.py  db.py  encryption.py  key_storage.py  llm.py
