[project]
name = "api-marketplace"
version = "0.1.0"
description = ""
authors = [
    {name = "baopg"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "datamart-profiler (>=0.12,<0.13)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "huggingface-hub (==0.35.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "faiss-cpu (>=1.13.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "bitsandbytes (>=0.48.2,<0.49.0)",
    "accelerate (>=1.12.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"



[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
